<resources>
    <string name="app_name">ExpensesApp</string>
    <string name="splash_text">Spend with brain</string>
    <string name="login_text">Login</string>
    <string name="forgot_pass_text">Forgot your password?</string>
    <string name="no_account_text">Have no account?</string>
    <string name="register_text">Register</string>
    <string name="login_screen_text">Enter your credentials to become again active</string>
    <string name="email_login">My email</string>
    <string name="password">*******</string>
    <string name="register_screen_text">Let us know more about you</string>
    <string name="name_register">Your name</string>
    <string name="email_register">Your email</string>
    <string name="have_account_text">Have already an account?</string>
    <string name="input_password">Password</string>
    <string name="reset_screen_text">We need your email to send the instructions /n to reset password</string>
    <string name="reset_text">Reset Password</string>
    <string name="nav_bar_budget">Budget</string>
    <string name="nav_bar_expense">Expenses</string>
    <string name="toolbar_title">Expences App</string>
    <string name="logout_text">Logout</string>
    <string name="drawer_hello">Hello</string>
    <string name="drawer_main_page_text">Main page</string>
    <string name="drawer_converter_text">Converter</string>
    <string name="title_budget">My Budget</string>
    <string name="title_expenses">My Expenses</string>
    <string name="budget_base_info">Base information</string>
    <string name="budget_base_details">Details</string>
    <string name="txt_current_balance">Current Balance</string>
    <string name="txt_today_expenses">Today Expenses</string>
    <string name="txt_week_expenses">This week expenses</string>
    <string name="txt_month_expenses">This month expenses</string>
    <string name="txt_btn_week">This week</string>
    <string name="txt_btn_month">This month</string>
    <string name="txt_btn_year">This year</string>
    <string name="txt_total_expenses">Total expenses</string>
    <string name="tv_expense_type">Income</string>
    <string name="txt_expense_title">Today</string>
    <string name="txt_expense_ei">Expense</string>
    <string name="txt_expense_amount">Amount</string>
    <string name="txt_date_action">Date</string>
    <string name="txt_category_action">Category</string>
    <string name="txt_amount_action">Amount</string>
    <string name="txt_details_action">Details</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="title_add_action">Add action</string>
    <string name="txt_income_category">Income</string>
    <string name="txt_travel_category">Travel</string>
    <string name="txt_beauty_category">Beauty</string>
    <string name="txt_health_category">Health</string>
    <string name="txt_savings_category">Savings</string>
    <string name="txt_clothes_category">Clothes</string>
    <string name="txt_car_category">Car</string>
    <string name="txt_food_category">Food</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_delete">DELETE</string>
    <string name="txt_edit">EDIT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password_err_empty">Password must not be empty</string>
    <string name="password_err_digits">Password must contain at least one digit</string>
    <string name="password_err_lowercase">Password must contain at least one lowercase letter</string>
    <string name="password_err_uppercase">Password must contain at least one uppercase letter</string>
    <string name="password_err_specialChar">Password must contain at least one special character</string>
    <string name="password_err_whiteSpace">Password must not contain spaces</string>
    <string name="password_err_length">Password must be at least 6 characters long</string>
    <string name="wrong_name">Insert First Name and Last Name</string>
    <string name="password_invalid">Password is not valid</string>
    <string name="wrong_email">Insert a valid Email Address</string>
    <string name="loggin_success">Login success!</string>
    <string name="loggin_failed">Login failed!</string>
    <string name="register_success">Register success!</string>
    <string name="register_failed">Register failed!</string>
    <string name="action_success">Action add successes!</string>
    <string name="action_failed">Action add failed!</string>
    <string name="no_user_found">No user find with this email!</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="amount_zero">Amount cannot be 0</string>
</resources>