<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.example.expenseappmvvm.utils.FormErrorsEnum" />

        <variable
            name="viewModel"
            type="com.example.expenseappmvvm.screen.loginScreen.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            tools:context=".screens.login.LoginActivity">

            <ImageView
                android:id="@+id/login_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_67dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_img" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_34dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/login_screen_text"
                android:textSize="@dimen/size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_img" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_30dp"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/montserrat_regular"
                android:onClick="@{()->viewModel.validateLogin()}"
                android:text="@string/login_text"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_pass_layout" />

            <TextView
                android:id="@+id/forgot_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_30dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="@{() -> viewModel.onClickReset()}"
                android:text="@string/forgot_pass_text"
                android:textColor="@color/orange"
                android:textSize="@dimen/size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_30dp"
                android:layout_marginTop="@dimen/space_18dp"
                android:focusedByDefault="true"
                android:hint="@string/email_hint"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/green"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTextView"
                app:placeholderText="@string/email_login"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_inputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.user.userEmail}"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email_err_text_view_login"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:text="@string/wrong_email"
                android:textColor="@color/red"
                android:visibility="@{viewModel.formErrorsList.contains(FormErrorsEnum.INVALID_EMAIL) ? View.VISIBLE: View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/login_email_layout"
                app:layout_constraintStart_toStartOf="@+id/login_email_layout"
                app:layout_constraintTop_toBottomOf="@+id/login_email_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_30dp"
                android:layout_marginTop="@dimen/space_30dp"
                android:focusedByDefault="true"
                android:hint="@string/password_hint"
                android:text="@string/input_password"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/green"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email_layout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green"
                app:placeholderText="@string/password"
                app:placeholderTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_pass_inputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword"
                    android:text="@={viewModel.user.userPassword}"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_err_text_view_login"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                app:customText="@{viewModel.passwordErr}"
                android:textColor="@color/red"
                app:autoSizeTextType="uniform"
                app:layout_constraintEnd_toEndOf="@+id/login_pass_layout"
                app:layout_constraintStart_toStartOf="@+id/login_pass_layout"
                app:layout_constraintTop_toBottomOf="@+id/login_pass_layout"
                tools:text="@string/password_invalid" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/forgot_pass_text"
                app:layout_constraintStart_toStartOf="@+id/forgot_pass_text"
                app:layout_constraintTop_toBottomOf="@+id/forgot_pass_text">

                <TextView
                    android:id="@+id/haveAccText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_11dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/no_account_text"
                    android:textSize="@dimen/size_16sp" />

                <TextView
                    android:id="@+id/register_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_11dp"
                    android:layout_marginTop="@dimen/space_11dp"
                    android:fontFamily="@font/roboto_regular"
                    android:onClick="@{()->viewModel.onClickRegister()}"
                    android:text="@string/register_text"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/size_16sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>