<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/size_10sp"
    android:background="@drawable/bg_expense_rectangle">

    <LinearLayout
        android:id="@+id/ll_expense_type"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/space_20dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_expense_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_expense_title"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/iv_expense_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_income" />

        <TextView
            android:id="@+id/tv_category_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/tv_expense_type"
            android:textSize="@dimen/size_10sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_expense_amount"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/space_20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_expense_remain"
        app:layout_constraintStart_toEndOf="@id/ll_expense_type"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_expense_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_expense_ei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/txt_expense_ei"
            android:textSize="@dimen/size_14sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_expense_remain"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/space_20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_expense_value_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_expense_amount"
            app:layout_constraintStart_toEndOf="@+id/tv_expense_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_expense_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/txt_expense_amount"
            android:textSize="@dimen/size_14sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_expense_ei" />
    </LinearLayout>

</LinearLayout>